--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,6 @@
 
 [env:esp32dev]
 platform = espressif32
-;platform = espressif32@3.5.0
 board = esp32dev
 framework = arduino
 upload_port = /dev/ttyUSB0
@@ -21,3 +20,4 @@ lib_deps =
 	zinggjm/GxEPD2@^1.5.0
 	bblanchon/ArduinoJson@^6.20.0
 	marvinroger/AsyncMqttClient@^0.9.0
+	esphome/AsyncTCP-esphome@^2.0.0
