--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.20.0
 	marvinroger/AsyncMqttClient@^0.9.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
+	adafruit/Adafruit GFX Library@^1.11.5
