--- a/platformio.ini
+++ b/platformio.ini
@@ -21,23 +21,17 @@ lib_deps =
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
 	marvinroger/AsyncMqttClient@^0.9.0
-	jandrassy/ArduinoOTA@^1.0.9
-	;olikraus/U8g2@^2.34.13
-	;adafruit/Adafruit GFX Library@^1.11.5
 
 [env:esp32dev-OTA]
 platform = espressif32
 board = esp32dev
 framework = arduino
-monitor_speed = 115200
 upload_port = 192.168.22.90
 upload_protocol = espota
-monitor_filters = default, time
+monitor_speed = 115200
+;upload_flags = --auth=password
 lib_deps = 
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
 	marvinroger/AsyncMqttClient@^0.9.0
-	jandrassy/ArduinoOTA@^1.0.9
-	olikraus/U8g2@^2.34.13
-	adafruit/Adafruit GFX Library@^1.11.5
