--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,8 @@ lib_deps =
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
-	marvinroger/AsyncMqttClient@^0.9.0
+	;marvinroger/AsyncMqttClient@^0.9.0
+	knolleary/PubSubClient@^2.8
 
 [env:esp32dev-OTA]
 platform = espressif32
@@ -29,9 +30,9 @@ framework = arduino
 upload_port = 192.168.22.90
 upload_protocol = espota
 monitor_speed = 115200
-;upload_flags = --auth=password
 lib_deps = 
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
-	marvinroger/AsyncMqttClient@^0.9.0
+	;marvinroger/AsyncMqttClient@^0.9.0
+	knolleary/PubSubClient@^2.8
