added Wemos D1 mini platformio

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,6 @@ lib_deps =
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
-	;marvinroger/AsyncMqttClient@^0.9.0
 	knolleary/PubSubClient@^2.8
 
 [env:esp32dev-OTA]
@@ -34,5 +33,31 @@ lib_deps =
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
 	bblanchon/ArduinoJson@^6.20.0
-	;marvinroger/AsyncMqttClient@^0.9.0
+	knolleary/PubSubClient@^2.8
+
+[env:d1mini]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
+monitor_filters = default, time
+lib_deps = 
+	zinggjm/GxEPD2@^1.5.0
+	https://github.com/olikraus/U8g2_for_Adafruit_GFX
+	bblanchon/ArduinoJson@^6.20.0
+	knolleary/PubSubClient@^2.8
+
+[env:d1mini-OTA]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+upload_port = 192.168.22.90
+upload_protocol = espota
+monitor_speed = 115200
+lib_deps = 
+	zinggjm/GxEPD2@^1.5.0
+	https://github.com/olikraus/U8g2_for_Adafruit_GFX
+	bblanchon/ArduinoJson@^6.20.0
 	knolleary/PubSubClient@^2.8
