--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,20 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.20.0
 	knolleary/PubSubClient@^2.8
 
+[env:esp32s2]
+platform = espressif32
+board = lolin_s2_mini
+framework = arduino
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
+monitor_filters = default, time
+lib_deps = 
+	zinggjm/GxEPD2@^1.5.0
+	https://github.com/olikraus/U8g2_for_Adafruit_GFX
+	bblanchon/ArduinoJson@^6.20.0
+	knolleary/PubSubClient@^2.8
+
 [env:d1mini]
 platform = espressif8266
 board = d1_mini
