--- a/platformio.ini
+++ b/platformio.ini
@@ -39,10 +39,11 @@ lib_deps =
 platform = espressif32
 board = lolin_s2_mini
 framework = arduino
-upload_port = /dev/ttyUSB0
-monitor_port = /dev/ttyUSB0
+upload_port = /dev/ttyACM0
+monitor_port = /dev/ttyACM0
 monitor_speed = 115200
 monitor_filters = default, time
+build_flags = !python build_flags.py
 lib_deps = 
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
