--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,20 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.20.0
 	knolleary/PubSubClient@^2.8
 
+[env:esp32s2-OTA]
+platform = espressif32
+board = lolin_s2_mini
+framework = arduino
+upload_port = 192.168.22.90
+upload_protocol = espota
+monitor_speed = 115200
+build_flags = !python build_flags.py
+lib_deps = 
+	zinggjm/GxEPD2@^1.5.0
+	https://github.com/olikraus/U8g2_for_Adafruit_GFX
+	bblanchon/ArduinoJson@^6.20.0
+	knolleary/PubSubClient@^2.8
+
 [env:d1mini]
 platform = espressif8266
 board = d1_mini
