--- a/platformio.ini
+++ b/platformio.ini
@@ -33,12 +33,17 @@ upload_port = /dev/ttyACM0
 monitor_port = /dev/ttyACM0
 monitor_speed = 115200
 monitor_filters = default, time
+board_build.filesystem = littlefs
 build_flags = !python build_flags.py
 lib_deps = 
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
+    bblanchon/ArduinoJson@^6.20.1
+    knolleary/PubSubClient@^2.8
+	esphome/AsyncTCP-esphome
+    esphome/ESPAsyncWebServer-esphome
+    ;me-no-dev/AsyncTCP
+    ;me-no-dev/ESP Async WebServer@^1.2.3
 
 [env:esp32s2-OTA]
 platform = espressif32
@@ -47,12 +52,15 @@ framework = arduino
 upload_port = 192.168.22.90
 upload_protocol = espota
 monitor_speed = 115200
+board_build.filesystem = littlefs
 build_flags = !python build_flags.py
 lib_deps = 
 	zinggjm/GxEPD2@^1.5.0
 	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
+    bblanchon/ArduinoJson@^6.20.1
+    knolleary/PubSubClient@^2.8
+	esphome/AsyncTCP-esphome
+    esphome/ESPAsyncWebServer-esphome
 
 [env:d1mini]
 platform = espressif8266
