--- a/platformio.ini
+++ b/platformio.ini
@@ -29,8 +29,8 @@ lib_deps =
 platform = espressif32
 board = lolin_s2_mini
 framework = arduino
-upload_port = /dev/ttyWemosC20
-monitor_port = /dev/ttyWemosC20
+upload_port = /dev/arduino/wemoss2
+monitor_port = /dev/arduino/wemoss2
 monitor_speed = 115200
 monitor_filters = default, time
 board_build.filesystem = littlefs
