--- a/platformio.ini
+++ b/platformio.ini
@@ -1,30 +1,3 @@
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
-upload_port = /dev/ttyUSB0
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
-monitor_filters = default, time
-lib_deps = 
-	zinggjm/GxEPD2@^1.5.0
-	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
-
-[env:esp32dev-OTA]
-platform = espressif32
-board = esp32dev
-framework = arduino
-upload_port = 192.168.22.90
-upload_protocol = espota
-monitor_speed = 115200
-lib_deps = 
-	zinggjm/GxEPD2@^1.5.0
-	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
-
 [env:esp32s2]
 platform = espressif32
 board = lolin_s2_mini
@@ -42,47 +15,4 @@ lib_deps =
     knolleary/PubSubClient@^2.8
 	esphome/AsyncTCP-esphome
     esphome/ESPAsyncWebServer-esphome
-
-[env:esp32s2-OTA]
-platform = espressif32
-board = lolin_s2_mini
-framework = arduino
-upload_port = 192.168.22.90
-upload_protocol = espota
-monitor_speed = 115200
-board_build.filesystem = littlefs
-build_flags = !python build_flags.py
-lib_deps = 
-	zinggjm/GxEPD2@^1.5.0
-	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-    bblanchon/ArduinoJson@^6.20.1
-    knolleary/PubSubClient@^2.8
-	esphome/AsyncTCP-esphome
-    esphome/ESPAsyncWebServer-esphome
-
-[env:d1mini]
-platform = espressif8266
-board = d1_mini
-framework = arduino
-upload_port = /dev/ttyUSB0
-monitor_port = /dev/ttyUSB0
-monitor_speed = 115200
-monitor_filters = default, time
-lib_deps = 
-	zinggjm/GxEPD2@^1.5.0
-	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
-
-[env:d1mini-OTA]
-platform = espressif8266
-board = d1_mini
-framework = arduino
-upload_port = 192.168.22.90
-upload_protocol = espota
-monitor_speed = 115200
-lib_deps = 
-	zinggjm/GxEPD2@^1.5.0
-	https://github.com/olikraus/U8g2_for_Adafruit_GFX
-	bblanchon/ArduinoJson@^6.20.0
-	knolleary/PubSubClient@^2.8
+    arduino-libraries/NTPClient @ ^3.2.1
